--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@ant-design/icons": "^4.6.2",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "axios": "^0.21.1",
     "moment-timezone": "^0.5.32",
     "node-sass": "^4.14.1",
