--- a/client/package.json
+++ b/client/package.json
@@ -1,16 +1,21 @@
 {
-  "name": "fe.group1",
-  "version": "0.1.0",
+  "name": "mymo-video-web",
+  "version": "1.0.0",
+  "description": "INFS7202 Project",
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
+    "@types/jsonwebtoken": "^8.5.1",
     "axios": "^0.21.1",
+    "install": "^0.13.0",
+    "jsonwebtoken": "^8.5.1",
     "moment-timezone": "^0.5.32",
     "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
+    "npm": "^7.9.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-google-login": "^5.2.2",
