--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.3",
     "multer": "^1.4.2",
+    "nodemailer": "^6.6.0",
     "uuid": "^7.0.0-beta.0"
   },
   "devDependencies": {
